--- a/faster_rcnn_train.ipynb
+++ b/faster_rcnn_train.ipynb
@@ -22555,7 +22555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "id": "05bd1414",
    "metadata": {},
    "outputs": [],
@@ -22565,6 +22565,7 @@
     "from matplotlib import pyplot as plt\n",
     "from tqdm import tqdm\n",
     "from matplotlib.patches import Rectangle\n",
+    "import easyocr\n",
     "\n",
     "class PlatesRecognitionInference:\n",
     "    \n",
@@ -22612,7 +22613,7 @@
     "    \n",
     "    def recognized_plates(self, img):\n",
     "        \n",
-    "        text = reader_custom.recognize(img, detail=0, allowlist=\"012334567890ABEKMHOPCTYX\")[0]\n",
+    "        text = self.ocr_model.recognize(img, detail=0, allowlist=\"012334567890ABEKMHOPCTYX\")[0]\n",
     "        \n",
     "        return text\n",
     "        \n",
@@ -22661,7 +22662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "id": "848c58a0",
    "metadata": {},
    "outputs": [],
@@ -22681,7 +22682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "cbd2e0de",
    "metadata": {},
    "outputs": [
